unpackaged/main/default/objects/blng__FinanceBook__c/fields/blng__Active__c.field-meta.xml
<CustomField>
    <fullName>blng__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Pour désactiver le livre de finance, désélectionnez la case. Les transactions existantes qui
        référencent le livre ne sont pas affectées.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>