unpackaged/main/default/objects/blng__FinanceBook__c/fields/blng__FinancePeriodDuration__c.field-meta.xml
<CustomField>
    <fullName>blng__FinancePeriodDuration__c</fullName>
    <inlineHelpText>La durée de la plage de dates de la période de financement.</inlineHelpText>
    <label>Finance Period Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__FinancePeriodDuration</valueSetName>
    </valueSet>
</CustomField>