unpackaged/main/default/objects/blng__FinanceBook__c/fields/blng__PeriodType__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodType__c</fullName>
    <inlineHelpText>Déterminez si le livre de finance est basé sur les transactions de revenu ou les transactions comptables.</inlineHelpText>
    <label>Period Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__FinanceBookPeriodType</valueSetName>
    </valueSet>
</CustomField>