unpackaged/main/default/objects/blng__FinanceBook__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Active__c</columns>
    <columns>blng__FinancePeriodDuration__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>